--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,11 @@
 body{
     background-color: gray;
     color: white;
+   
+}
+
+.test{
+    width: 500px;
+    height: 300px; 
+    background-image: url("earth.jpg");
 }
